I added the map with the map API and I retrieved the location using the LocationManager. There are two big steps that i can do now: - show the continuous path on the map - using the location, compute the speed and the distance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="login_button">Login</string>
+    <string name="pause">Pause</string>
+    <string name="timer">Timer</string>
+    <string name="heartrate">HeartRate</string>
+    <string name="show_map">Show map</string>
+    <string name="temperature">Temperature</string>
+    <string name="pressure">Pressure</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
